--- a/3100f25.html
+++ b/3100f25.html
@@ -116,52 +116,11 @@
                                                 <h6>Current assignments/other course materials</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <!-- <ul class="assignment-list">
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Final exam learning objectives/review sheet
-                                                    </span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/finalreview.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-
-
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam 
-                                                        #3 learning objectives/review sheet
-                                                    </span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/exam3review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #7
-                                                    </span><span class="col-md-2 due-date">due 11/20</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-
-
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #6
-                                                    </span><span class="col-md-2 due-date">due 11/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam 
-                                                        #2 learning objectives/review sheet
-                                                    </span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #5
-                                                    </span><span class="col-md-2 due-date">due 10/16</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4
-                                                    </span><span class="col-md-2 due-date">due <del>10/2</del> 10/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam 
-                                                        #1 learning objectives/review sheet
-                                                    </span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #3</span><span class="col-md-2 due-date">due 9/18</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-
-                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #2</span><span class="col-md-2 due-date">due 9/6</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                    </li>
-                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">due 8/26</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                <ul class="assignment-list">
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Static syllabus (will not be updated!)</span><span class="col-md-2 due-date">due 8/26</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/syllabus.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
                                             </ul>
-                                            </div> -->
+                                            </div> 
                                             <p>Watch this space!</p>
                                         </div>
                                     </div>
