--- a/3100f25.html
+++ b/3100f25.html
@@ -117,7 +117,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
-                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Static syllabus (will not be updated!)</span><span class="col-md-2 due-date">due 8/26</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/syllabus.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Static syllabus (will not be updated!)</span><span class="col-md-2 due-date">posted 8/13</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/syllabus.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
                                             </ul>
                                             </div> 
