--- a/3100f25.html
+++ b/3100f25.html
@@ -140,6 +140,8 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/20</span><span class="course-task col-md-10"> Example of strong induction: Existence of binary representations. Informal discussion of making postage out of $4$ cent and $5$ cent stamps. Sequences as functions. The graph of a sequence. </span></li>
+                                                   
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/18</span><span class="course-task col-md-10"> More on mathematical induction. PMI with a general base case. Statement of strong induction. </span></li>
                                                    
