--- a/3100f25.html
+++ b/3100f25.html
@@ -141,6 +141,9 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+    <li class="with-bullet"><span class="course-date col-sm-1">8/25</span><span class="course-task col-md-10"> Proof of our equivalent formulation of bounded. Definition of a subsequence. If $\{a_n\}$ is increasing, and $\{b_n\}$ is a subsequence of $\{a_n\}$, then $\{b_n\}$ is increasing. </span></li>
+                                                   
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/22</span><span class="course-task col-md-10"> Increasing, decreasing, and monotone sequences. If $\{a_n\}$ is increasing, then $a_n \le a_m$ whenever $n\le m$. Bounded above, bounded below, and bounded. Equivalent formulation of bounded: There is an $M\ge 0$ with $-M \le a_n \le M$ for all natural numbers $n$. </span></li>
                                                    
 
