--- a/3100f25.html
+++ b/3100f25.html
@@ -141,6 +141,12 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/27</span><span class="course-task col-md-10"> &quot;Eventual&quot; properties, as illustrated by
+                                                        the notion of &quot;eventually increasing&quot;. The definition of convergence. If $\{a_n\}$ is a constant sequence, with each $a_n=c \in \mathbb{R}$, then $\lim a_n =c$. 
+                                                    </span></li>
+                                                   
+
     <li class="with-bullet"><span class="course-date col-sm-1">8/25</span><span class="course-task col-md-10"> Proof of our equivalent formulation of bounded. Definition of a subsequence. If $\{a_n\}$ is increasing, and $\{b_n\}$ is a subsequence of $\{a_n\}$, then $\{b_n\}$ is increasing. </span></li>
                                                    
 
