--- a/3100f25.html
+++ b/3100f25.html
@@ -143,7 +143,21 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/8</span><span class="course-task col-md-10"> If $\{a_n\}$ converges to the real number $L$, then every subsequence of $\{a_n\}$ converges to $L$. Convergence/divergence of geometric sequences. If $\{a_n\}$ is bounded above by the real number $U$, and $a_n$ converges to the real number $A$, then $A \le U$.
+                                                    </span></li>
 
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/5</span><span class="course-task col-md-10"> More on computing limits by hand, including quadratic examples. If $\{a_n\}$ converges, then $\{a_n\}$ is bounded.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/3</span><span class="course-task col-md-10"> Interlude on absolute values
+                                                    </span></li>
+
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/29</span><span class="course-task col-md-10"> &quot;Eventual&quot; properties, as illustrated by
+                                                        the notion of &quot;eventually increasing&quot;. The definition of convergence. If $\{a_n\}$ is a constant sequence, with each $a_n=c \in \mathbb{R}$, then $\lim a_n =c$. 
+                                                    </span></li>
+                                                   
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/27</span><span class="course-task col-md-10"> &quot;Eventual&quot; properties, as illustrated by
                                                         the notion of &quot;eventually increasing&quot;. The definition of convergence. If $\{a_n\}$ is a constant sequence, with each $a_n=c \in \mathbb{R}$, then $\lim a_n =c$. 
                                                     </span></li>
